--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Waldo</title>
 </head>
 <body>
-	<script src="controller.js"></script>
+	<script src="dom_manipulator.js"></script>
+	<script type="module" src="controller.js"></script>
 </body>
 </html>
