test console log - cant access class helloWaldo from DOM

--- a/ext/src/bg/background.html
+++ b/ext/src/bg/background.html
@@ -4,8 +4,10 @@
 	<title></title>
 </head>
 <body>
-<script type=”module” src=”background.js”></script>
-<script type="module" src="helloWaldo.js"></script>
-<script src="inject.js"></script>
+<script  src="../class/class_helloWaldo.js"></script>
+<script  src="../inject/inject.js"></script>
+<script  src="background.js"></script>
+
+
 </body>
 </html>
