--- a/ext/src/page_action/page_action.html
+++ b/ext/src/page_action/page_action.html
@@ -10,8 +10,6 @@
 		font-size: 2em;
 	}
 </style>
-
-<div id="mainPopup">
-<h1>Hello extensionizr!</h1>
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/page_action/page_action.html. The CSS is there, too.</p>
-</div>
+<!--
+<div id="mainPopup"></div>
+-->
